добавлена динамика к поисковику и к файлу contact.html

--- a/super_info_core/templates/contact.html
+++ b/super_info_core/templates/contact.html
@@ -21,7 +21,8 @@
                     <h2 class="tm-color-primary tm-post-title tm-mb-60">Contact Us</h2>
                 </div>
                 <div class="col-lg-7 tm-contact-left">
-                    <form method="POST" action="" class="mb-5 ml-auto mr-0 tm-contact-form">                        
+                    <form method="POST" action="" class="mb-5 ml-auto mr-0 tm-contact-form">
+                        {% csrf_token %}
                         <div class="form-group row mb-4">
                             <label for="name" class="col-sm-3 col-form-label text-right tm-color-primary">Name</label>
                             <div class="col-sm-9">
@@ -55,41 +56,37 @@
                 </div>
                 <div class="col-lg-5 tm-contact-right">
                     <address class="mb-4 tm-color-gray">
-                        120 Lorem ipsum dolor sit amet,
-                        consectetur adipiscing 10550
+                        {{ address.address }}
                     </address>
                     <span class="d-block">
                         Tel:
-                        <a href="tel:060-070-0980" class="tm-color-gray">060-070-0980</a>
+                        <a href="tel:060-070-0980" class="tm-color-gray">{{ address.phone }}</a>
                     </span>
                     <span class="mb-4 d-block">
                         Email:
-                        <a href="mailto:info@company.com" class="tm-color-gray">info@company.com</a>
+                        <a href="mailto:info@company.com" class="tm-color-gray">{{ address.email }}</a>
                     </span>
                     <p class="mb-5 tm-line-height-short">
-                        Maecenas eu mi eu dui cursus
-                        consequat non eu metus. Morbi ac
-                        turpis eleifend, commodo purus
-                        eget, commodo mauris.
+                       {{ address.last_text }}
                     </p>
                     <ul class="tm-social-links">
                         <li class="mb-2">
-                            <a href="https://facebook.com" class="d-flex align-items-center justify-content-center">
+                            <a href="{{ social.facebook }}" class="d-flex align-items-center justify-content-center">
                                 <i class="fab fa-facebook"></i>
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="https://twitter.com" class="d-flex align-items-center justify-content-center">
+                            <a href="{{ social.twitter }}" class="d-flex align-items-center justify-content-center">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="https://youtube.com" class="d-flex align-items-center justify-content-center">
+                            <a href="{{ social.youtube }}" class="d-flex align-items-center justify-content-center">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="https://instagram.com" class="d-flex align-items-center justify-content-center mr-0">
+                            <a href="{{ social.instagram }}" class="d-flex align-items-center justify-content-center mr-0">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </li>
