--- a/super_info_core/templates/banner.html
+++ b/super_info_core/templates/banner.html
@@ -10,15 +10,20 @@
             </div>
             <nav class="tm-nav" id="tm-nav">
                 <ul>
-                    <li class="tm-nav-item"><a href="{% url 'home_url' %}" class="tm-nav-link">
-                        <i class="fas fa-home"></i>
-                        Blog Home
-                    </a></li>
-                    <li class="tm-nav-item active"><a href="{% url 'contact_url' %}" class="tm-nav-link">
-                        <i class="far fa-comments"></i>
-                        Contact Us
-                    </a></li>
-                </ul>
+    <li class="tm-nav-item {% if request.path == '/home/' %}active{% endif %}">
+        <a href="{% url 'home_url' %}" class="tm-nav-link">
+            <i class="fas fa-home"></i>
+            Blog Home
+        </a>
+    </li>
+    <li class="tm-nav-item {% if request.path == '/contact/' %}active{% endif %}">
+        <a href="{% url 'contact_url' %}" class="tm-nav-link">
+            <i class="far fa-comments"></i>
+            Contact Us
+        </a>
+    </li>
+</ul>
+
             </nav>
         </div>
     </header>
