--- a/super_info_core/templates/index.html
+++ b/super_info_core/templates/index.html
@@ -8,40 +8,70 @@
             <!-- Search form -->
             <div class="row tm-row">
                 <div class="col-12">
-                    <form method="GET" class="form-inline tm-mb-80 tm-search-form">                
+                    <form action="{% url 'find_url' %}" method="GET" class="form-inline tm-mb-80 tm-search-form">
+                        {% csrf_token %}
                         <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
                         <button class="tm-search-button" type="submit">
                             <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
                         </button>                                
                     </form>
+
                 </div>                
             </div>            
             <div class="row tm-row">
-                {% for item in publication_list %}
-                <article class="col-12 col-md-6 tm-post">
-                    <hr class="tm-hr-primary">
-                    <a href="{% url 'publication_url' item.id %}" class="effect-lily tm-post-link tm-pt-60">
-                        <div class="tm-post-link-inner">
-                            <img src="{{ item.image.url }}" alt="Image" class="img-fluid">
+                {% if request.GET.query %}
+                    {% for item in publication_find %}
+                    <article class="col-12 col-md-6 tm-post">
+                        <hr class="tm-hr-primary">
+                        <a href="{% url 'publication_url' item.id %}" class="effect-lily tm-post-link tm-pt-60">
+                            <div class="tm-post-link-inner">
+                                <img src="{{ item.image.url }}" alt="Image" class="img-fluid">
+                            </div>
+                            {% if item.is_new == True %}
+                                <span class="position-absolute tm-new-badge">New</span>
+                            {% endif %}
+                            <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{ item.title }}</h2>
+                        </a>
+                        <p class="tm-pt-30">
+                            {{ item.short_description }}
+                        </p>
+                        <div class="d-flex justify-content-between tm-pt-45">
+                            <span class="tm-color-primary">Hashtags: {% for hashtag_item in item.hashtags.all %} #{{ hashtag_item.title }} {% endfor %}</span>
+                            <span class="tm-color-primary">{{ item.created_at }}</span>
                         </div>
-                        {% if item.is_new == True %}
-                            <span class="position-absolute tm-new-badge">New</span>
-                        {% endif %}
-                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{ item.title }}</h2>
-                    </a>                    
-                    <p class="tm-pt-30">
-                        {{ item.short_description }}
-                    </p>
-                    <div class="d-flex justify-content-between tm-pt-45">
-                        <span class="tm-color-primary">Hashtags: {% for hashtag_item in item.hashtags.all %} #{{ hashtag_item.title }} {% endfor %}</span>
-                        <span class="tm-color-primary">{{ item.created_at }}</span>
-                    </div>
-                    <hr>
-                    <div class="d-flex justify-content-between">
-                        <span>{{ item.comments.count }} comments</span>
-                    </div>
-                </article>
-                {% endfor %}
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <span>{{ item.comments.count }} comments</span>
+                        </div>
+                    </article>
+                    {% endfor %}
+                {% else %}
+                    {% for item in publication_list %}
+                    <article class="col-12 col-md-6 tm-post">
+                        <hr class="tm-hr-primary">
+                        <a href="{% url 'publication_url' item.id %}" class="effect-lily tm-post-link tm-pt-60">
+                            <div class="tm-post-link-inner">
+                                <img src="{{ item.image.url }}" alt="Image" class="img-fluid">
+                            </div>
+                            {% if item.is_new == True %}
+                                <span class="position-absolute tm-new-badge">New</span>
+                            {% endif %}
+                            <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{ item.title }}</h2>
+                        </a>
+                        <p class="tm-pt-30">
+                            {{ item.short_description }}
+                        </p>
+                        <div class="d-flex justify-content-between tm-pt-45">
+                            <span class="tm-color-primary">Hashtags: {% for hashtag_item in item.hashtags.all %} #{{ hashtag_item.title }} {% endfor %}</span>
+                            <span class="tm-color-primary">{{ item.created_at }}</span>
+                        </div>
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <span>{{ item.comments.count }} comments</span>
+                        </div>
+                    </article>
+                    {% endfor %}
+                {% endif %}
             </div>
             <div class="row tm-row tm-mt-100 tm-mb-75">
                 <div class="tm-prev-next-wrapper">
