--- a/super_info_core/templates/index.html
+++ b/super_info_core/templates/index.html
@@ -8,7 +8,7 @@
             <!-- Search form -->
             <div class="row tm-row">
                 <div class="col-12">
-                    <form action="home/?category_pk={{ item.id }}" method="GET" class="form-inline tm-mb-80 tm-search-form">
+                    <form action="{% url 'find_url' %}" method="GET" class="form-inline tm-mb-80 tm-search-form">
                         {% csrf_token %}
                         <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
                         <button class="tm-search-button" type="submit">
