--- a/super_info_core/templates/publication-detail.html
+++ b/super_info_core/templates/publication-detail.html
@@ -57,7 +57,7 @@
                                     <textarea class="form-control" name="message" rows="6" placeholder="Your comment text"></textarea>
                                 </div>
                                 <div class="text-right">
-                                    <button class="tm-btn tm-btn-primary tm-btn-small">Submit</button>
+                                    <button class="tm-btn tm-btn-primary tm-btn-small">Отправить</button>
                                 </div>
                             </form>
 
