--- a/super_info_core/templates/index.html
+++ b/super_info_core/templates/index.html
@@ -14,19 +14,18 @@
                             <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
                         </button>
                     </form>
-
                 </div>
             </div>
             <div class="row tm-row">
-                {% if request.GET.query %}
-                    {% for item in publication_find %}
+                {% if publication_list %}
+                    {% for item in publication_list %}
                     <article class="col-12 col-md-6 tm-post">
                         <hr class="tm-hr-primary">
                         <a href="{% url 'publication_url' item.id %}" class="effect-lily tm-post-link tm-pt-60">
                             <div class="tm-post-link-inner">
                                 <img src="{{ item.image.url }}" alt="Image" class="img-fluid">
                             </div>
-                            {% if item.is_new == True %}
+                            {% if item.is_new %}
                                 <span class="position-absolute tm-new-badge">New</span>
                             {% endif %}
                             <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{ item.title }}</h2>
@@ -45,58 +44,42 @@
                     </article>
                     {% endfor %}
                 {% else %}
-                    {% for item in publication_list %}
-                    <article class="col-12 col-md-6 tm-post">
-                        <hr class="tm-hr-primary">
-                        <a href="{% url 'publication_url' item.id %}" class="effect-lily tm-post-link tm-pt-60">
-                            <div class="tm-post-link-inner">
-                                <img src="{{ item.image.url }}" alt="Image" class="img-fluid">
-                            </div>
-                            {% if item.is_new == True %}
-                                <span class="position-absolute tm-new-badge">New</span>
-                            {% endif %}
-                            <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{ item.title }}</h2>
-                        </a>
-                        <p class="tm-pt-30">
-                            {{ item.short_description }}
-                        </p>
-                        <div class="d-flex justify-content-between tm-pt-45">
-                            <span class="tm-color-primary">Hashtags: {% for hashtag_item in item.hashtags.all %} #{{ hashtag_item.title }} {% endfor %}</span>
-                            <span class="tm-color-primary">{{ item.created_at }}</span>
-                        </div>
-                        <hr>
-                        <div class="d-flex justify-content-between">
-                            <span>{{ item.comments.count }} comments</span>
-                        </div>
-                    </article>
-                    {% endfor %}
+                    <p>No publications found.</p>
                 {% endif %}
             </div>
             <div class="row tm-row tm-mt-100 tm-mb-75">
                 <div class="tm-prev-next-wrapper">
-                    <a href="#" class="mb-2 tm-btn tm-btn-primary tm-prev-next disabled tm-mr-20">Prev</a>
-                    <a href="#" class="mb-2 tm-btn tm-btn-primary tm-prev-next">Next</a>
+                    {% if page_obj.has_previous %}
+                        <a href="?{% if request.GET.query %}query={{ request.GET.query }} {% endif %}page={{ page_obj.previous_page_number }}" class="mb-2 tm-btn tm-btn-primary tm-prev-next tm-mr-20">Prev</a>
+                    {% else %}
+                        <span class="mb-2 tm-btn tm-btn-primary tm-prev-next disabled tm-mr-20">Prev</span>
+                    {% endif %}
+
+                    {% if page_obj.has_next %}
+                        <a href="?{% if request.GET.query %}query={{ request.GET.query }}&{% endif %}page={{ page_obj.next_page_number }}" class="mb-2 tm-btn tm-btn-primary tm-prev-next">Next</a>
+                    {% else %}
+                        <span class="mb-2 tm-btn tm-btn-primary tm-prev-next disabled">Next</span>
+                    {% endif %}
                 </div>
                 <div class="tm-paging-wrapper">
-                    <span class="d-inline-block mr-3">Page</span>
+                    <span class="d-inline-block mr-3">Page {{ page_obj.number }} of {{ paginator.num_pages }}</span>
                     <nav class="tm-paging-nav d-inline-block">
                         <ul>
-                            <li class="tm-paging-item active">
-                                <a href="#" class="mb-2 tm-btn tm-paging-link">1</a>
-                            </li>
-                            <li class="tm-paging-item">
-                                <a href="#" class="mb-2 tm-btn tm-paging-link">2</a>
-                            </li>
-                            <li class="tm-paging-item">
-                                <a href="#" class="mb-2 tm-btn tm-paging-link">3</a>
-                            </li>
-                            <li class="tm-paging-item">
-                                <a href="#" class="mb-2 tm-btn tm-paging-link">4</a>
-                            </li>
+                            {% for num in paginator.page_range %}
+                                {% if page_obj.number == num %}
+                                    <li class="tm-paging-item active">
+                                        <span class="mb-2 tm-btn tm-paging-link">{{ num }}</span>
+                                    </li>
+                                {% else %}
+                                    <li class="tm-paging-item">
+                                        <a href="?{% if request.GET.query %}query={{ request.GET.query }}&{% endif %}page={{ num }}" class="mb-2 tm-btn tm-paging-link">{{ num }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
                         </ul>
                     </nav>
-                </div>                
-            </div>            
+                </div>
+            </div>
             {% include 'footer-part1.html' %}
         </main>
     </div>
